--- a/08_cnc/index.html
+++ b/08_cnc/index.html
@@ -1,26 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYS-S-12: Intro to Digital Fabrication </title>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
 <body>
 
-
+<body style="background-color:#211d21; color:floralwhite;">
 <xmp theme="journal" style="display:none;">
 
 
+<div>
+   </div>
+  NEON TEXT GENERATOR WEBSITE IS DOWN TODAY, SORRY!
+  </div>
 
-  ### GUANG WEI (JONATHAN) TENG
+   After making my scale last time, I wanted to create something that would resemble an arcade machine that determined how hard a button is pressed.
+   <div>
+   </div>
+   To do that, I linked up my last assignment to an led strip with this code:
+   ```
+   CODE
+   ```
 
-   Hi! I am Jonathan Teng from Taipei, Taiwan. This is one of my first experiences with actual website-making and the "maker" movement. Interestingly, the last time I heard this term was back in 8th grade when I was still in a Taiwanese public school. The only memories of that course was that the teacher had anger issues and would shout at me (NOT FUN!) This experience, though, seems different and I look foward to making projects and working with every one of you.
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="IMG_1435.gif" class=center>
+  </div>
+<div>
+</div>
+The shorter the distance is between the copper plates, the "higher" the LEDs will go.
 
-  ![image of myself](./joenathan.JPG)
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./trim.92770442-99DD-4917-9A5D-F020B7E4FF8F.gif" class=center>
+  </div>
 
-  this is me, as indicated by the photo, I am in desperate need of acne cream.
 
-  [GO BACK](../index.html).
+ After that, I used an oscilloscope. Although the graph did not change because I am using an LED strip, looking at this GIF, it could be seen that the harder I press the button, the lower the frequency.
+
+
+ [GO BACK](../index.html).
 
 
 
