--- a/08_cnc/index.html
+++ b/08_cnc/index.html
@@ -13,35 +13,41 @@
 
 <div>
    </div>
-  NEON TEXT GENERATOR WEBSITE IS DOWN TODAY, SORRY!
+    <div class="col-sm-4">
+         <img alt="INTRO" src="download (21).gif" class=center>
   </div>
 
-   After making my scale last time, I wanted to create something that would resemble an arcade machine that determined how hard a button is pressed.
-   <div>
-   </div>
-   To do that, I linked up my last assignment to an led strip with this code:
-   ```
-   CODE
-   ```
+   For the CNC milling project, I decided to make a 2.5 Gummy Bear mold using the SRM-20.
 
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="IMG_1435.gif" class=center>
+         <img alt="INTRO" src="unknown (4).png" class=center>
   </div>
 <div>
 </div>
-The shorter the distance is between the copper plates, the "higher" the LEDs will go.
+Unfortunately, because of improper tape use (it wasnt completely stuck) the machine was only able to get the head of the gummy bear done.
 
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./trim.92770442-99DD-4917-9A5D-F020B7E4FF8F.gif" class=center>
+         <img alt="INTRO" src="./IMG_1618.jpg" class=center>
   </div>
 
 
- After that, I used an oscilloscope. Although the graph did not change because I am using an LED strip, looking at this GIF, it could be seen that the harder I press the button, the lower the frequency.
+ <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download (19).gif" class=center>
+  </div>
 
+  For my mold and cast project, me, Varun, and Mustafa decided to work on a cast of the screaming chicken toy. Our first cast actually failed because we put too little part B. After finishing our cast, we filled it with molten metal, and after it solidified, we used the sanding machine to make the bottom flat.
+
+ <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_0097.gif" class=center>
+  </div>
 
  [GO BACK](../index.html).
 
