--- a/09_iot/index.html
+++ b/09_iot/index.html
@@ -1,26 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYS-S-12: Intro to Digital Fabrication </title>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
 <body>
 
-
+<body style="background-color:#211d21; color:floralwhite;">
 <xmp theme="journal" style="display:none;">
 
 
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="download (21).gif" class=center>
+  </div>
 
-  ### GUANG WEI (JONATHAN) TENG
+   For the CNC milling project, I decided to make a 2.5 Gummy Bear mold using the SRM-20.
 
-   Hi! I am Jonathan Teng from Taipei, Taiwan. This is one of my first experiences with actual website-making and the "maker" movement. Interestingly, the last time I heard this term was back in 8th grade when I was still in a Taiwanese public school. The only memories of that course was that the teacher had anger issues and would shout at me (NOT FUN!) This experience, though, seems different and I look foward to making projects and working with every one of you.
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="unknown (4).png" class=center>
+  </div>
+<div>
+</div>
+Unfortunately, because of improper tape use (it wasnt completely stuck) the machine was only able to get the head of the gummy bear done.
 
-  ![image of myself](./joenathan.JPG)
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1618.jpg" class=center>
+  </div>
 
-  this is me, as indicated by the photo, I am in desperate need of acne cream.
 
-  [GO BACK](../index.html).
+ <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download (19).gif" class=center>
+  </div>
+
+  For my mold and cast project, me, Varun, and Mustafa decided to work on a cast of the screaming chicken toy. Our first cast actually failed because we put too little part B. After finishing our cast, we filled it with molten metal, and after it solidified, we used the sanding machine to make the bottom flat.
+
+ <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_0097.gif" class=center>
+  </div>
+
+ [GO BACK](../index.html).
 
 
 
