--- a/09_iot/index.html
+++ b/09_iot/index.html
@@ -14,40 +14,34 @@
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="download (21).gif" class=center>
+         <img alt="INTRO" src="download (22).gif" class=center>
   </div>
 
-   For the CNC milling project, I decided to make a 2.5 Gummy Bear mold using the SRM-20.
+  I teamed up with Varun to make a remote-controlled temperature regulating system. (doesnt regulate it yet)
+  How it work is basically that an input of a desired temperature could be entered on a website and if the actual temperature is greater than the entered temperature, a pin would be set to HIGh (LED used here, but useful for a motor in a fan) This is the code
+
+  ```
+  CODE
+  ```
+
+The most difficult part was converting char into int, but I just recoded and took some inspiration from online.
 
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="unknown (4).png" class=center>
+         <img alt="INTRO" src="IMG_1635.gif" class=center>
   </div>
 <div>
 </div>
-Unfortunately, because of improper tape use (it wasnt completely stuck) the machine was only able to get the head of the gummy bear done.
-
+The website also updates real-time!
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./IMG_1618.jpg" class=center>
+         <img alt="INTRO" src="./IMG_1637.gif" class=center>
   </div>
 
 
- <div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./download (19).gif" class=center>
-  </div>
 
-  For my mold and cast project, me, Varun, and Mustafa decided to work on a cast of the screaming chicken toy. Our first cast actually failed because we put too little part B. After finishing our cast, we filled it with molten metal, and after it solidified, we used the sanding machine to make the bottom flat.
-
- <div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./IMG_0097.gif" class=center>
-  </div>
 
  [GO BACK](../index.html).
 
