--- a/12_final/index.html
+++ b/12_final/index.html
@@ -21,7 +21,7 @@
          <img alt="INTRO" src="./proposal.gif" class=center>
     </div>
     <div class="col-sm-4">
-      <a href="./12_final/index.html">
+      <a href="./final/index.html">
          <img alt="INTRO" src="./12.gif" class=center>
     </div>
     <div class="col-sm-4">
