--- a/07_out/index.html
+++ b/07_out/index.html
@@ -13,7 +13,7 @@
 
 <div>
    </div>
-  NEON TEXT GENERATOR WEBSITE IS DOWN TODAY, SORRY!
+  Strength Tester
   </div>
 
    After making my scale last time, I wanted to create something that would resemble an arcade machine that determined how hard a button is pressed.
