--- a/08_cnc/index.html
+++ b/08_cnc/index.html
@@ -46,7 +46,7 @@ Unfortunately, because of improper tape use (it wasnt completely stuck) the mach
  <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./IMG_0097.gif" class=center>
+         <img alt="INTRO" src="./IMG_0097.jpg" class=center>
   </div>
 
  [GO BACK](../index.html).
